# vegetation

./: .gitignore  Cargo.toml  README.md  runcc-windows.yml  runcc.yml  test.basis
.cargo/: config.toml
components/: Cargo.toml
components/src/: lib.rs  plugin.rs  setup.rs
editor/: Cargo.toml
editor/assets/: test.basis
editor/assets/shaders/: config.wgsl  fern.wgsl  fern_prepass.wgsl
editor/src/: main.rs
examples/: simple.rs
src/: compress.rs  fern.rs  lib.rs  plugin.rs  setup.rs
src/components/: mod.rs  plugin.rs  setup.rs
src/gpu2cpu/: fetch.rs  mod.rs  node.rs  source.rs
