[package]
name = "components"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "basis-universal",
] }
procedural-meshes = { path = "../../meshes" }
bevy-inspector-egui = "0.23.2"
hot-lib-reloader = "0.7.0"
bevy_panorbit_camera = "0.14.0"

[features]
default = []
dynamic = ["bevy/file_watcher"]
