[package]
name = "editor"
description = "An Egui-based editor for the procedural-vegetation crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "file_watcher",
    "basis-universal",
] }
components = { path = "../components" }
procedural-vegetation = { path = "../" }
procedural-meshes = { path = "../../meshes" }
bevy-inspector-egui = "0.23.2"
hot-lib-reloader = "0.7.0"
bevy_editor_pls = "0.8.0"

[features]
default = []
reload = ["components/dynamic", "bevy/dynamic_linking"]

[lints]
workspace = true
