[package]
name = "editor"
description = "An Egui-based editor for the bevy_procedural_vegetation crate"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
bevy = { version = "^0.13.1", default-features = false, features = [
    "bevy_pbr",
    "bevy_sprite",
    "tonemapping_luts",
    "bevy_winit",
] }
bevy-inspector-egui = "^0.23.4"
bevy_panorbit_camera = { version = "^0.17.0", features = ["bevy_egui"] }

bevy_procedural_vegetation = { path = "../" }

[features]
reload = [
    "bevy_procedural_vegetation/dynamic",
    "bevy/dynamic_linking",
    "bevy/file_watcher",
]
default = []

[lints]
workspace = true
